              templated, and explicitly support 8-bit integers (i.e., chars)
              and 128-bit integers (if the platform supports them).
        Function toString():
            - New function for converting native C++ integers to strings, with
              explicit support for 128-bit integers.
        Function valueOf():
            - The native C++ integer versions of valueOf() are now templated.
            - The unsigned integer versions now reject negative numbers
              instead of performing wrap-around arithmetic.
            - All numeric versions of valueOf() (native integers and double)
              have been tightened with respect to unexpected characters,
              including leading and trailing whitespace:
              + they always return false, as the documentation has always
                promised (in the past, they succeeded in the presence of
                leading whitespace);
              + instead of performing the conversion "as best it can", the
                documentation now states that the value stored in dest is
                undefined.
        Type alias Int128, UInt128:
            - Provides access to native 128-bit integers, if the platform
              supports them.  This is preferred to the old (and clumsier) way
              of accessing 128-bit types via the type aliases in IntOfSize<16>.
        Type alias make_signed_cpp_t<T>, make_unsigned_cpp_t<T>:
            - New alternatives to std::make_signed_t<T> and
              std::make_unsigned_t<T> that allow for 128-bit integers also.
        Constant is_cpp_integer_v<T>, is_signed_cpp_integer_v<T>,
                is_unsigned_cpp_integer_v<T>:
            - New compile-time constant is_signed_cpp_integer_v<T>.
            - All three constants are now false when T == bool (previously,
              is_cpp_integer_v<bool> and is_unsigned_cpp_integer_v<bool> were
              both true).
        Concepts:
            - Many new concepts: